Project/Kernel/lang/parser.output
Terminals which are not used

   L_FUNCTIONNAME
   L_FUNCTIONCALL
   L_FUNCTION
   L_PARAMETER
   L_AMPERSAND
   L_LBRACE
   L_RBRACE
   L_LBRACKET
   L_RBRACKET
   L_INT
   L_DOUBLE
   L_RATIONAL
   L_STRING
   L_IF
   L_ELSE
   L_FOR
   L_WHILE
   L_RETURN


State 26 conflicts: 2 shift/reduce
State 27 conflicts: 2 shift/reduce
State 28 conflicts: 2 shift/reduce
State 29 conflicts: 2 shift/reduce
State 31 conflicts: 1 shift/reduce


Grammar

    0 $accept: operator_list $end

    1 operator_list: operator
    2              | operator_list operator

    3 identifier: L_IDENTIFIER

    4 operator: L_SEMI
    5         | L_NEWLINE
    6         | expression L_NEWLINE
    7         | assign_operator L_NEWLINE
    8         | input_operator L_NEWLINE
    9         | output_operator L_NEWLINE

   10 assign_operator: identifier L_ASSIGN expression

   11 expression: expression L_MUL expression
   12           | expression L_DIV expression
   13           | expression L_REM expression
   14           | expression L_PLUS expression
   15           | expression L_MINUS expression
   16           | expression L_POWER expression
   17           | expression L_LT expression
   18           | expression L_LE expression
   19           | expression L_GE expression
   20           | expression L_GT expression
   21           | expression L_EQ expression
   22           | expression L_NE expression
   23           | expression L_COMMA expression
   24           | expression L_AND expression
   25           | expression L_OR expression
   26           | L_LPAREN expression L_RPAREN
   27           | term

   28 term: term L_PLUSPLUS
   29     | term L_MINUSMINUS
   30     | L_PLUSPLUS term
   31     | L_MINUSMINUS term
   32     | L_MINUS term
   33     | L_NOT term
   34     | function_id L_RPAREN
   35     | L_IDENTIFIER
   36     | L_NUMBERLITERAL
   37     | L_RATIONALLITERAL
   38     | L_DOUBLELITERAL
   39     | L_STRINGLITERAL

   40 @1: /* empty */

   41 function_id: L_IDENTIFIER @1 L_LPAREN argument_list

   42 argument_list: expression
   43              | argument_list L_COMMA expression
   44              | /* empty */

   45 input_operator: L_INPUT argument_list

   46 output_operator: L_OUTPUT argument_list


Terminals, with rules where they appear

$end (0) 0
error (256)
L_NUMBERLITERAL (258) 36
L_DOUBLELITERAL (259) 38
L_RATIONALLITERAL (260) 37
L_STRINGLITERAL (261) 39
L_IDENTIFIER (262) 3 35 41
L_FUNCTIONNAME (263)
L_FUNCTIONCALL (264)
L_FUNCTION (265)
L_PARAMETER (266)
L_COMMA (267) 23 43
L_MINUS (268) 15 32
L_PLUS (269) 14
L_REM (270) 13
L_MUL (271) 11
L_DIV (272) 12
L_POWER (273) 16
L_AMPERSAND (274)
L_PLUSPLUS (275) 28 30
L_MINUSMINUS (276) 29 31
L_OR (277) 25
L_AND (278) 24
L_NOT (279) 33
L_LBRACE (280)
L_RBRACE (281)
L_LBRACKET (282)
L_RBRACKET (283)
L_LPAREN (284) 26 41
L_RPAREN (285) 26 34
L_ASSIGN (286) 10
L_SEMI (287) 4
L_NEWLINE (288) 5 6 7 8 9
L_LE (289) 18
L_GE (290) 19
L_LT (291) 17
L_GT (292) 20
L_NE (293) 22
L_EQ (294) 21
L_INT (295)
L_DOUBLE (296)
L_RATIONAL (297)
L_STRING (298)
L_IF (299)
L_ELSE (300)
L_FOR (301)
L_WHILE (302)
L_RETURN (303)
L_INPUT (304) 45
L_OUTPUT (305) 46


Nonterminals, with rules where they appear

$accept (51)
    on left: 0
operator_list (52)
    on left: 1 2, on right: 0 2
identifier (53)
    on left: 3, on right: 10
operator (54)
    on left: 4 5 6 7 8 9, on right: 1 2
assign_operator (55)
    on left: 10, on right: 7
expression (56)
    on left: 11 12 13 14 15 16 17 18 19 20 21 22 23 24 25 26 27,
    on right: 6 10 11 12 13 14 15 16 17 18 19 20 21 22 23 24 25 26
    42 43
term (57)
    on left: 28 29 30 31 32 33 34 35 36 37 38 39, on right: 27 28 29
    30 31 32 33
function_id (58)
    on left: 41, on right: 34
@1 (59)
    on left: 40, on right: 41
argument_list (60)
    on left: 42 43 44, on right: 41 43 45 46
input_operator (61)
    on left: 45, on right: 8
output_operator (62)
    on left: 46, on right: 9


state 0

    0 $accept: . operator_list $end

    L_NUMBERLITERAL    shift, and go to state 1
    L_DOUBLELITERAL    shift, and go to state 2
    L_RATIONALLITERAL  shift, and go to state 3
    L_STRINGLITERAL    shift, and go to state 4
    L_IDENTIFIER       shift, and go to state 5
    L_MINUS            shift, and go to state 6
    L_PLUSPLUS         shift, and go to state 7
    L_MINUSMINUS       shift, and go to state 8
    L_NOT              shift, and go to state 9
    L_LPAREN           shift, and go to state 10
    L_SEMI             shift, and go to state 11
    L_NEWLINE          shift, and go to state 12
    L_INPUT            shift, and go to state 13
    L_OUTPUT           shift, and go to state 14

    operator_list    go to state 15
    identifier       go to state 16
    operator         go to state 17
    assign_operator  go to state 18
    expression       go to state 19
    term             go to state 20
    function_id      go to state 21
    input_operator   go to state 22
    output_operator  go to state 23


state 1

   36 term: L_NUMBERLITERAL .

    $default  reduce using rule 36 (term)


state 2

   38 term: L_DOUBLELITERAL .

    $default  reduce using rule 38 (term)


state 3

   37 term: L_RATIONALLITERAL .

    $default  reduce using rule 37 (term)


state 4

   39 term: L_STRINGLITERAL .

    $default  reduce using rule 39 (term)


state 5

    3 identifier: L_IDENTIFIER .
   35 term: L_IDENTIFIER .
   41 function_id: L_IDENTIFIER . @1 L_LPAREN argument_list

    L_LPAREN  reduce using rule 40 (@1)
    L_ASSIGN  reduce using rule 3 (identifier)
    $default  reduce using rule 35 (term)

    @1  go to state 24


state 6

   32 term: L_MINUS . term

    L_NUMBERLITERAL    shift, and go to state 1
    L_DOUBLELITERAL    shift, and go to state 2
    L_RATIONALLITERAL  shift, and go to state 3
    L_STRINGLITERAL    shift, and go to state 4
    L_IDENTIFIER       shift, and go to state 25
    L_MINUS            shift, and go to state 6
    L_PLUSPLUS         shift, and go to state 7
    L_MINUSMINUS       shift, and go to state 8
    L_NOT              shift, and go to state 9

    term         go to state 26
    function_id  go to state 21


state 7

   30 term: L_PLUSPLUS . term

    L_NUMBERLITERAL    shift, and go to state 1
    L_DOUBLELITERAL    shift, and go to state 2
    L_RATIONALLITERAL  shift, and go to state 3
    L_STRINGLITERAL    shift, and go to state 4
    L_IDENTIFIER       shift, and go to state 25
    L_MINUS            shift, and go to state 6
    L_PLUSPLUS         shift, and go to state 7
    L_MINUSMINUS       shift, and go to state 8
    L_NOT              shift, and go to state 9

    term         go to state 27
    function_id  go to state 21


state 8

   31 term: L_MINUSMINUS . term

    L_NUMBERLITERAL    shift, and go to state 1
    L_DOUBLELITERAL    shift, and go to state 2
    L_RATIONALLITERAL  shift, and go to state 3
    L_STRINGLITERAL    shift, and go to state 4
    L_IDENTIFIER       shift, and go to state 25
    L_MINUS            shift, and go to state 6
    L_PLUSPLUS         shift, and go to state 7
    L_MINUSMINUS       shift, and go to state 8
    L_NOT              shift, and go to state 9

    term         go to state 28
    function_id  go to state 21


state 9

   33 term: L_NOT . term

    L_NUMBERLITERAL    shift, and go to state 1
    L_DOUBLELITERAL    shift, and go to state 2
    L_RATIONALLITERAL  shift, and go to state 3
    L_STRINGLITERAL    shift, and go to state 4
    L_IDENTIFIER       shift, and go to state 25
    L_MINUS            shift, and go to state 6
    L_PLUSPLUS         shift, and go to state 7
    L_MINUSMINUS       shift, and go to state 8
    L_NOT              shift, and go to state 9

    term         go to state 29
    function_id  go to state 21


state 10

   26 expression: L_LPAREN . expression L_RPAREN

    L_NUMBERLITERAL    shift, and go to state 1
    L_DOUBLELITERAL    shift, and go to state 2
    L_RATIONALLITERAL  shift, and go to state 3
    L_STRINGLITERAL    shift, and go to state 4
    L_IDENTIFIER       shift, and go to state 25
    L_MINUS            shift, and go to state 6
    L_PLUSPLUS         shift, and go to state 7
    L_MINUSMINUS       shift, and go to state 8
    L_NOT              shift, and go to state 9
    L_LPAREN           shift, and go to state 10

    expression   go to state 30
    term         go to state 20
    function_id  go to state 21


state 11

    4 operator: L_SEMI .

    $default  reduce using rule 4 (operator)


state 12

    5 operator: L_NEWLINE .

    $default  reduce using rule 5 (operator)


state 13

   45 input_operator: L_INPUT . argument_list

    L_NUMBERLITERAL    shift, and go to state 1
    L_DOUBLELITERAL    shift, and go to state 2
    L_RATIONALLITERAL  shift, and go to state 3
    L_STRINGLITERAL    shift, and go to state 4
    L_IDENTIFIER       shift, and go to state 25
    L_MINUS            shift, and go to state 6
    L_PLUSPLUS         shift, and go to state 7
    L_MINUSMINUS       shift, and go to state 8
    L_NOT              shift, and go to state 9
    L_LPAREN           shift, and go to state 10

    $default  reduce using rule 44 (argument_list)

    expression     go to state 31
    term           go to state 20
    function_id    go to state 21
    argument_list  go to state 32


state 14

   46 output_operator: L_OUTPUT . argument_list

    L_NUMBERLITERAL    shift, and go to state 1
    L_DOUBLELITERAL    shift, and go to state 2
    L_RATIONALLITERAL  shift, and go to state 3
    L_STRINGLITERAL    shift, and go to state 4
    L_IDENTIFIER       shift, and go to state 25
    L_MINUS            shift, and go to state 6
    L_PLUSPLUS         shift, and go to state 7
    L_MINUSMINUS       shift, and go to state 8
    L_NOT              shift, and go to state 9
    L_LPAREN           shift, and go to state 10

    $default  reduce using rule 44 (argument_list)

    expression     go to state 31
    term           go to state 20
    function_id    go to state 21
    argument_list  go to state 33


state 15

    0 $accept: operator_list . $end
    2 operator_list: operator_list . operator

    $end               shift, and go to state 34
    L_NUMBERLITERAL    shift, and go to state 1
    L_DOUBLELITERAL    shift, and go to state 2
    L_RATIONALLITERAL  shift, and go to state 3
    L_STRINGLITERAL    shift, and go to state 4
    L_IDENTIFIER       shift, and go to state 5
    L_MINUS            shift, and go to state 6
    L_PLUSPLUS         shift, and go to state 7
    L_MINUSMINUS       shift, and go to state 8
    L_NOT              shift, and go to state 9
    L_LPAREN           shift, and go to state 10
    L_SEMI             shift, and go to state 11
    L_NEWLINE          shift, and go to state 12
    L_INPUT            shift, and go to state 13
    L_OUTPUT           shift, and go to state 14

    identifier       go to state 16
    operator         go to state 35
    assign_operator  go to state 18
    expression       go to state 19
    term             go to state 20
    function_id      go to state 21
    input_operator   go to state 22
    output_operator  go to state 23


state 16

   10 assign_operator: identifier . L_ASSIGN expression

    L_ASSIGN  shift, and go to state 36


state 17

    1 operator_list: operator .

    $default  reduce using rule 1 (operator_list)


state 18

    7 operator: assign_operator . L_NEWLINE

    L_NEWLINE  shift, and go to state 37


state 19

    6 operator: expression . L_NEWLINE
   11 expression: expression . L_MUL expression
   12           | expression . L_DIV expression
   13           | expression . L_REM expression
   14           | expression . L_PLUS expression
   15           | expression . L_MINUS expression
   16           | expression . L_POWER expression
   17           | expression . L_LT expression
   18           | expression . L_LE expression
   19           | expression . L_GE expression
   20           | expression . L_GT expression
   21           | expression . L_EQ expression
   22           | expression . L_NE expression
   23           | expression . L_COMMA expression
   24           | expression . L_AND expression
   25           | expression . L_OR expression

    L_COMMA    shift, and go to state 38
    L_MINUS    shift, and go to state 39
    L_PLUS     shift, and go to state 40
    L_REM      shift, and go to state 41
    L_MUL      shift, and go to state 42
    L_DIV      shift, and go to state 43
    L_POWER    shift, and go to state 44
    L_OR       shift, and go to state 45
    L_AND      shift, and go to state 46
    L_NEWLINE  shift, and go to state 47
    L_LE       shift, and go to state 48
    L_GE       shift, and go to state 49
    L_LT       shift, and go to state 50
    L_GT       shift, and go to state 51
    L_NE       shift, and go to state 52
    L_EQ       shift, and go to state 53


state 20

   27 expression: term .
   28 term: term . L_PLUSPLUS
   29     | term . L_MINUSMINUS

    L_PLUSPLUS    shift, and go to state 54
    L_MINUSMINUS  shift, and go to state 55

    $default  reduce using rule 27 (expression)


state 21

   34 term: function_id . L_RPAREN

    L_RPAREN  shift, and go to state 56


state 22

    8 operator: input_operator . L_NEWLINE

    L_NEWLINE  shift, and go to state 57


state 23

    9 operator: output_operator . L_NEWLINE

    L_NEWLINE  shift, and go to state 58


state 24

   41 function_id: L_IDENTIFIER @1 . L_LPAREN argument_list

    L_LPAREN  shift, and go to state 59


state 25

   35 term: L_IDENTIFIER .
   41 function_id: L_IDENTIFIER . @1 L_LPAREN argument_list

    L_LPAREN  reduce using rule 40 (@1)
    $default  reduce using rule 35 (term)

    @1  go to state 24


state 26

   28 term: term . L_PLUSPLUS
   29     | term . L_MINUSMINUS
   32     | L_MINUS term .

    L_PLUSPLUS    shift, and go to state 54
    L_MINUSMINUS  shift, and go to state 55

    L_PLUSPLUS    [reduce using rule 32 (term)]
    L_MINUSMINUS  [reduce using rule 32 (term)]
    $default      reduce using rule 32 (term)


state 27

   28 term: term . L_PLUSPLUS
   29     | term . L_MINUSMINUS
   30     | L_PLUSPLUS term .

    L_PLUSPLUS    shift, and go to state 54
    L_MINUSMINUS  shift, and go to state 55

    L_PLUSPLUS    [reduce using rule 30 (term)]
    L_MINUSMINUS  [reduce using rule 30 (term)]
    $default      reduce using rule 30 (term)


state 28

   28 term: term . L_PLUSPLUS
   29     | term . L_MINUSMINUS
   31     | L_MINUSMINUS term .

    L_PLUSPLUS    shift, and go to state 54
    L_MINUSMINUS  shift, and go to state 55

    L_PLUSPLUS    [reduce using rule 31 (term)]
    L_MINUSMINUS  [reduce using rule 31 (term)]
    $default      reduce using rule 31 (term)


state 29

   28 term: term . L_PLUSPLUS
   29     | term . L_MINUSMINUS
   33     | L_NOT term .

    L_PLUSPLUS    shift, and go to state 54
    L_MINUSMINUS  shift, and go to state 55

    L_PLUSPLUS    [reduce using rule 33 (term)]
    L_MINUSMINUS  [reduce using rule 33 (term)]
    $default      reduce using rule 33 (term)


state 30

   11 expression: expression . L_MUL expression
   12           | expression . L_DIV expression
   13           | expression . L_REM expression
   14           | expression . L_PLUS expression
   15           | expression . L_MINUS expression
   16           | expression . L_POWER expression
   17           | expression . L_LT expression
   18           | expression . L_LE expression
   19           | expression . L_GE expression
   20           | expression . L_GT expression
   21           | expression . L_EQ expression
   22           | expression . L_NE expression
   23           | expression . L_COMMA expression
   24           | expression . L_AND expression
   25           | expression . L_OR expression
   26           | L_LPAREN expression . L_RPAREN

    L_COMMA   shift, and go to state 38
    L_MINUS   shift, and go to state 39
    L_PLUS    shift, and go to state 40
    L_REM     shift, and go to state 41
    L_MUL     shift, and go to state 42
    L_DIV     shift, and go to state 43
    L_POWER   shift, and go to state 44
    L_OR      shift, and go to state 45
    L_AND     shift, and go to state 46
    L_RPAREN  shift, and go to state 60
    L_LE      shift, and go to state 48
    L_GE      shift, and go to state 49
    L_LT      shift, and go to state 50
    L_GT      shift, and go to state 51
    L_NE      shift, and go to state 52
    L_EQ      shift, and go to state 53


state 31

   11 expression: expression . L_MUL expression
   12           | expression . L_DIV expression
   13           | expression . L_REM expression
   14           | expression . L_PLUS expression
   15           | expression . L_MINUS expression
   16           | expression . L_POWER expression
   17           | expression . L_LT expression
   18           | expression . L_LE expression
   19           | expression . L_GE expression
   20           | expression . L_GT expression
   21           | expression . L_EQ expression
   22           | expression . L_NE expression
   23           | expression . L_COMMA expression
   24           | expression . L_AND expression
   25           | expression . L_OR expression
   42 argument_list: expression .

    L_COMMA  shift, and go to state 38
    L_MINUS  shift, and go to state 39
    L_PLUS   shift, and go to state 40
    L_REM    shift, and go to state 41
    L_MUL    shift, and go to state 42
    L_DIV    shift, and go to state 43
    L_POWER  shift, and go to state 44
    L_OR     shift, and go to state 45
    L_AND    shift, and go to state 46
    L_LE     shift, and go to state 48
    L_GE     shift, and go to state 49
    L_LT     shift, and go to state 50
    L_GT     shift, and go to state 51
    L_NE     shift, and go to state 52
    L_EQ     shift, and go to state 53

    L_COMMA   [reduce using rule 42 (argument_list)]
    $default  reduce using rule 42 (argument_list)


state 32

   43 argument_list: argument_list . L_COMMA expression
   45 input_operator: L_INPUT argument_list .

    L_COMMA  shift, and go to state 61

    $default  reduce using rule 45 (input_operator)


state 33

   43 argument_list: argument_list . L_COMMA expression
   46 output_operator: L_OUTPUT argument_list .

    L_COMMA  shift, and go to state 61

    $default  reduce using rule 46 (output_operator)


state 34

    0 $accept: operator_list $end .

    $default  accept


state 35

    2 operator_list: operator_list operator .

    $default  reduce using rule 2 (operator_list)


state 36

   10 assign_operator: identifier L_ASSIGN . expression

    L_NUMBERLITERAL    shift, and go to state 1
    L_DOUBLELITERAL    shift, and go to state 2
    L_RATIONALLITERAL  shift, and go to state 3
    L_STRINGLITERAL    shift, and go to state 4
    L_IDENTIFIER       shift, and go to state 25
    L_MINUS            shift, and go to state 6
    L_PLUSPLUS         shift, and go to state 7
    L_MINUSMINUS       shift, and go to state 8
    L_NOT              shift, and go to state 9
    L_LPAREN           shift, and go to state 10

    expression   go to state 62
    term         go to state 20
    function_id  go to state 21


state 37

    7 operator: assign_operator L_NEWLINE .

    $default  reduce using rule 7 (operator)


state 38

   23 expression: expression L_COMMA . expression

    L_NUMBERLITERAL    shift, and go to state 1
    L_DOUBLELITERAL    shift, and go to state 2
    L_RATIONALLITERAL  shift, and go to state 3
    L_STRINGLITERAL    shift, and go to state 4
    L_IDENTIFIER       shift, and go to state 25
    L_MINUS            shift, and go to state 6
    L_PLUSPLUS         shift, and go to state 7
    L_MINUSMINUS       shift, and go to state 8
    L_NOT              shift, and go to state 9
    L_LPAREN           shift, and go to state 10

    expression   go to state 63
    term         go to state 20
    function_id  go to state 21


state 39

   15 expression: expression L_MINUS . expression

    L_NUMBERLITERAL    shift, and go to state 1
    L_DOUBLELITERAL    shift, and go to state 2
    L_RATIONALLITERAL  shift, and go to state 3
    L_STRINGLITERAL    shift, and go to state 4
    L_IDENTIFIER       shift, and go to state 25
    L_MINUS            shift, and go to state 6
    L_PLUSPLUS         shift, and go to state 7
    L_MINUSMINUS       shift, and go to state 8
    L_NOT              shift, and go to state 9
    L_LPAREN           shift, and go to state 10

    expression   go to state 64
    term         go to state 20
    function_id  go to state 21


state 40

   14 expression: expression L_PLUS . expression

    L_NUMBERLITERAL    shift, and go to state 1
    L_DOUBLELITERAL    shift, and go to state 2
    L_RATIONALLITERAL  shift, and go to state 3
    L_STRINGLITERAL    shift, and go to state 4
    L_IDENTIFIER       shift, and go to state 25
    L_MINUS            shift, and go to state 6
    L_PLUSPLUS         shift, and go to state 7
    L_MINUSMINUS       shift, and go to state 8
    L_NOT              shift, and go to state 9
    L_LPAREN           shift, and go to state 10

    expression   go to state 65
    term         go to state 20
    function_id  go to state 21


state 41

   13 expression: expression L_REM . expression

    L_NUMBERLITERAL    shift, and go to state 1
    L_DOUBLELITERAL    shift, and go to state 2
    L_RATIONALLITERAL  shift, and go to state 3
    L_STRINGLITERAL    shift, and go to state 4
    L_IDENTIFIER       shift, and go to state 25
    L_MINUS            shift, and go to state 6
    L_PLUSPLUS         shift, and go to state 7
    L_MINUSMINUS       shift, and go to state 8
    L_NOT              shift, and go to state 9
    L_LPAREN           shift, and go to state 10

    expression   go to state 66
    term         go to state 20
    function_id  go to state 21


state 42

   11 expression: expression L_MUL . expression

    L_NUMBERLITERAL    shift, and go to state 1
    L_DOUBLELITERAL    shift, and go to state 2
    L_RATIONALLITERAL  shift, and go to state 3
    L_STRINGLITERAL    shift, and go to state 4
    L_IDENTIFIER       shift, and go to state 25
    L_MINUS            shift, and go to state 6
    L_PLUSPLUS         shift, and go to state 7
    L_MINUSMINUS       shift, and go to state 8
    L_NOT              shift, and go to state 9
    L_LPAREN           shift, and go to state 10

    expression   go to state 67
    term         go to state 20
    function_id  go to state 21


state 43

   12 expression: expression L_DIV . expression

    L_NUMBERLITERAL    shift, and go to state 1
    L_DOUBLELITERAL    shift, and go to state 2
    L_RATIONALLITERAL  shift, and go to state 3
    L_STRINGLITERAL    shift, and go to state 4
    L_IDENTIFIER       shift, and go to state 25
    L_MINUS            shift, and go to state 6
    L_PLUSPLUS         shift, and go to state 7
    L_MINUSMINUS       shift, and go to state 8
    L_NOT              shift, and go to state 9
    L_LPAREN           shift, and go to state 10

    expression   go to state 68
    term         go to state 20
    function_id  go to state 21


state 44

   16 expression: expression L_POWER . expression

    L_NUMBERLITERAL    shift, and go to state 1
    L_DOUBLELITERAL    shift, and go to state 2
    L_RATIONALLITERAL  shift, and go to state 3
    L_STRINGLITERAL    shift, and go to state 4
    L_IDENTIFIER       shift, and go to state 25
    L_MINUS            shift, and go to state 6
    L_PLUSPLUS         shift, and go to state 7
    L_MINUSMINUS       shift, and go to state 8
    L_NOT              shift, and go to state 9
    L_LPAREN           shift, and go to state 10

    expression   go to state 69
    term         go to state 20
    function_id  go to state 21


state 45

   25 expression: expression L_OR . expression

    L_NUMBERLITERAL    shift, and go to state 1
    L_DOUBLELITERAL    shift, and go to state 2
    L_RATIONALLITERAL  shift, and go to state 3
    L_STRINGLITERAL    shift, and go to state 4
    L_IDENTIFIER       shift, and go to state 25
    L_MINUS            shift, and go to state 6
    L_PLUSPLUS         shift, and go to state 7
    L_MINUSMINUS       shift, and go to state 8
    L_NOT              shift, and go to state 9
    L_LPAREN           shift, and go to state 10

    expression   go to state 70
    term         go to state 20
    function_id  go to state 21


state 46

   24 expression: expression L_AND . expression

    L_NUMBERLITERAL    shift, and go to state 1
    L_DOUBLELITERAL    shift, and go to state 2
    L_RATIONALLITERAL  shift, and go to state 3
    L_STRINGLITERAL    shift, and go to state 4
    L_IDENTIFIER       shift, and go to state 25
    L_MINUS            shift, and go to state 6
    L_PLUSPLUS         shift, and go to state 7
    L_MINUSMINUS       shift, and go to state 8
    L_NOT              shift, and go to state 9
    L_LPAREN           shift, and go to state 10

    expression   go to state 71
    term         go to state 20
    function_id  go to state 21


state 47

    6 operator: expression L_NEWLINE .

    $default  reduce using rule 6 (operator)


state 48

   18 expression: expression L_LE . expression

    L_NUMBERLITERAL    shift, and go to state 1
    L_DOUBLELITERAL    shift, and go to state 2
    L_RATIONALLITERAL  shift, and go to state 3
    L_STRINGLITERAL    shift, and go to state 4
    L_IDENTIFIER       shift, and go to state 25
    L_MINUS            shift, and go to state 6
    L_PLUSPLUS         shift, and go to state 7
    L_MINUSMINUS       shift, and go to state 8
    L_NOT              shift, and go to state 9
    L_LPAREN           shift, and go to state 10

    expression   go to state 72
    term         go to state 20
    function_id  go to state 21


state 49

   19 expression: expression L_GE . expression

    L_NUMBERLITERAL    shift, and go to state 1
    L_DOUBLELITERAL    shift, and go to state 2
    L_RATIONALLITERAL  shift, and go to state 3
    L_STRINGLITERAL    shift, and go to state 4
    L_IDENTIFIER       shift, and go to state 25
    L_MINUS            shift, and go to state 6
    L_PLUSPLUS         shift, and go to state 7
    L_MINUSMINUS       shift, and go to state 8
    L_NOT              shift, and go to state 9
    L_LPAREN           shift, and go to state 10

    expression   go to state 73
    term         go to state 20
    function_id  go to state 21


state 50

   17 expression: expression L_LT . expression

    L_NUMBERLITERAL    shift, and go to state 1
    L_DOUBLELITERAL    shift, and go to state 2
    L_RATIONALLITERAL  shift, and go to state 3
    L_STRINGLITERAL    shift, and go to state 4
    L_IDENTIFIER       shift, and go to state 25
    L_MINUS            shift, and go to state 6
    L_PLUSPLUS         shift, and go to state 7
    L_MINUSMINUS       shift, and go to state 8
    L_NOT              shift, and go to state 9
    L_LPAREN           shift, and go to state 10

    expression   go to state 74
    term         go to state 20
    function_id  go to state 21


state 51

   20 expression: expression L_GT . expression

    L_NUMBERLITERAL    shift, and go to state 1
    L_DOUBLELITERAL    shift, and go to state 2
    L_RATIONALLITERAL  shift, and go to state 3
    L_STRINGLITERAL    shift, and go to state 4
    L_IDENTIFIER       shift, and go to state 25
    L_MINUS            shift, and go to state 6
    L_PLUSPLUS         shift, and go to state 7
    L_MINUSMINUS       shift, and go to state 8
    L_NOT              shift, and go to state 9
    L_LPAREN           shift, and go to state 10

    expression   go to state 75
    term         go to state 20
    function_id  go to state 21


state 52

   22 expression: expression L_NE . expression

    L_NUMBERLITERAL    shift, and go to state 1
    L_DOUBLELITERAL    shift, and go to state 2
    L_RATIONALLITERAL  shift, and go to state 3
    L_STRINGLITERAL    shift, and go to state 4
    L_IDENTIFIER       shift, and go to state 25
    L_MINUS            shift, and go to state 6
    L_PLUSPLUS         shift, and go to state 7
    L_MINUSMINUS       shift, and go to state 8
    L_NOT              shift, and go to state 9
    L_LPAREN           shift, and go to state 10

    expression   go to state 76
    term         go to state 20
    function_id  go to state 21


state 53

   21 expression: expression L_EQ . expression

    L_NUMBERLITERAL    shift, and go to state 1
    L_DOUBLELITERAL    shift, and go to state 2
    L_RATIONALLITERAL  shift, and go to state 3
    L_STRINGLITERAL    shift, and go to state 4
    L_IDENTIFIER       shift, and go to state 25
    L_MINUS            shift, and go to state 6
    L_PLUSPLUS         shift, and go to state 7
    L_MINUSMINUS       shift, and go to state 8
    L_NOT              shift, and go to state 9
    L_LPAREN           shift, and go to state 10
